# django-fsm-admin-lite

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: actions.yml  release.yml  tests.yml
src/fsm_admin_lite/: mixins.py
src/fsm_admin_lite/templates/admin/: fsm_admin_change_form.html
tests/: settings.py  test_mixins.py  wsgi.py
tests/testapp/: admin.py  models.py
tests/testapp/migrations/: 0001_initial.py  0002_blogpost_step.py  0002_blogpost_title_alter_blogpost_state.py
tests/tests/: settings.py  wsgi.py
