[metadata]
name = django-fsm-admin-lite
version = 0.1.0
description = Integrate django-fsm state transitions into Django Admin
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthieu Etchegoyen
author_email = etchegom@gmail.com
url = https://github.com/etchegom/django-fsm-admin-lite
license = MIT
keywords = Django
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    Django>=3.2
    django-fsm>=2.6.1
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src
